package com.umeng.ufp.core.domain.protobuf;
option java_outer_classname = "UserProtos";

option java_package = "com.umeng.ufp.core.domain.protobuf";

message UserEntry {
    optional int32 id = 1;
    optional string email = 2;
    optional string nickname = 3;
    optional string password = 4;
    optional string type = 5;
    optional string name = 6;
    optional string phone = 7;
    optional string logo_url = 8;
    optional string logo_name = 9;
    optional string blacklist = 10;
    optional string status = 11;
    optional int32 login_times = 12;
    optional int64 last_login_time = 13;
}
